--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,43 +1,45 @@
-@use "variables" as*; 
+@use "variables" as*;
 
 /* Configuración del footer */
 footer {
-    p {
-       padding: 1%;
-       font-family: $font;
-       background-color: $celeste;
-       
-      .p-maps {
-        font-size: .7rem;   
-        font-family: $font; 
-        padding: 1% 0;   
-        margin: 1% 0; 
-        background-color: $transparente;
-        }
-      }
-    
-    .redes {
-      @include flexMenu;
-      justify-content: space-evenly;
-      background-color: $celestes2;
-      padding: 10px 0px;
-    
-      img { 
-           width: 25px;
-          }
-      }    
-   
-    .img-maps {
-      background-color: $celestes2;
+  p {
+    padding: 1%;
+    font-family: $font;
+    background-color: $celeste;
+
+    .p-maps {
+      font-size: .7rem;
+      font-family: $font;
+      padding: 1% 0;
+      margin: 1% 0;
+      background-color: $transparente;
+    }
+  }
+
+  .redes {
+    @include flexMenu;
+    justify-content: space-evenly;
+    background-color: $celestes2;
+    padding: 3% 0;
+
+    img {
+      width: 25px;
+    }
+  }
+
+  .img-maps {
+    background-color: $celestes2;
+    margin: 0;
+
+    .enlace-maps {
+      width: 100%;
       margin: 0;
+    }
+  }
+}
 
-      .enlace-maps {
-        width: 380px;
-        margin: 5%;
-        }
-      }
-  }    
-
- /*Arreglo para acomodar padding y margin sobrante*/
-    ul {    padding-left: 0%;
-            margin-bottom: 0%;}
+/*Arreglo para acomodar padding y margin sobrante*/
+ul {
+  padding-left: 0%;
+  margin-bottom: 0%;
+}
