--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,44 +1,40 @@
-@use "variables" as*; 
+@use "variables" as*;
 
 /* Configuración menú principal */
 
 header {
     nav {
         ul {
-        display: grid;
-        gap: 1px;
-        justify-items: center;
-        list-style: none;
-        background-image: url(../imagenes/caps\ frente2.jpg);
-        background-size: cover;
-        background-position:center;
-        height: 100px;
-          
-        .menus {
-                width: 15px;
-                image-orientation:inherit;
-                }
-                                                      
-        a { 
-               font-size: .5rem;
-               background-color: rgba(121, 231, 218, 0.877);
-               color: $negro;
-               text-decoration: none;
-               letter-spacing: 1px;
-               border: $celestes2 double 3px;
-               padding: 4px;
-               border-radius: 8px;
-               text-align: center;
-               
-               }
+            display: grid;
+            gap: 1%;
+            align-content: center;
+            text-align: center;
+            padding: 2% 0;
+            list-style: none;
+            background-image: url(../imagenes/caps\ frente2.jpg);
+            background-size: cover;
+            background-position: center;
+            width: 100%;
+            height: 100%;
+
+            .menus {
+                width: 5%;
+                justify-content: center;
+            }
+
+            a {
+                font-size: .5rem;
+                font-family: $font;
+                background-color: rgba(121, 231, 218, 0.877);
+                color: $negro;
+                text-decoration: none;
+                letter-spacing: 1px;
+                border: $celestes2 double 3px;
+                padding: 1%;
+                border-radius: 8px;
+                text-align: center;
+
             }
         }
     }
-
-    
-
-
-
- 
-
-
+}
