--- a/scss/partials/_pagTurnos.scss
+++ b/scss/partials/_pagTurnos.scss
@@ -1,57 +1,53 @@
-@use "variables" as*; 
+@use "variables" as*;
 
 /** Configuraciones formulario de la página turnos-contacto **/
 
 
-.formu-padre { 
+.formu-padre {
+  @include flex;
+  gap: 5px;
+  background-color: $celeste;
+  margin: 3% 8%;
+  padding: 1%;
+  border-style: double;
+  border-radius: 40px;
+  border-color: rgb(50, 196, 188);
+  background-image: radial-gradient($transparente, $celestes2);
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+
+  .formu-hijo {
     @include flex;
-    gap: 5px;
-    background-color: $celeste;
-    margin: 3% 15%;
-    padding: 1%;    
-    border-style: double;
-    border-radius: 40px;
-    border-color: rgb(50, 196, 188);
-    background-image: radial-gradient($transparente, $celestes2); 
-    font-size: 1.2rem;  
-    letter-spacing: 1px; 
+    padding: 3%;
+    margin: 1% 2%;
 
-      .formu-hijo { @include flex;
-        padding: 5px;
-        margin: 2px 15px;
-
-      select {    padding: 5px;
-        border-radius: 40px;
-        text-align: center;
-        background-color: rgba(255, 255, 255, 0.864);
-        border: 2px solid $celeste;
-        font-size: 16px;  
-        }
-
-      textarea {
-        @extend select;
-        }
-
-      input {
-        @extend select;
-        }
-      } 
-
-      .boton { font-family: $font;
-        font-weight: bold;
-        margin: 4% 15%;
-        padding: 2%; 
-        background-color: $celeste; 
-        border: solid 4px $celestes2;
-        border-radius: 35px; 
-        font-size: 1.1rem;
-        letter-spacing: 1px;
-        }
+    select {
+      padding: 4%;
+      border-radius: 40px;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.864);
+      border: 2px solid $celeste;
+      font-size: 16px;
     }
-         
-  
 
+    textarea {
+      @extend select;
+    }
 
+    input {
+      @extend select;
+    }
+  }
 
-
-
+  .boton {
+    font-family: $font;
+    font-weight: bold;
+    margin: 4% 15%;
+    padding: 2%;
+    background-color: $celeste;
+    border: solid 4px $celestes2;
+    border-radius: 35px;
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+  }
+}
